--- a/MemoryMosaic/Shared/TextInput.razor
+++ b/MemoryMosaic/Shared/TextInput.razor
@@ -3,13 +3,16 @@
 <link href="css/Components/TextInput.css" rel="stylesheet"/>
 
 @* https://stackoverflow.com/a/75706085 *@
-@if (Disabled)
-{
-	<input @ref="@input" type="text" id="@ID" class="@Class" style="font-size: @(FontSize)px; width: @Width; @Style" @bind="@Input" @bind:after="@UpdateInput" @onkeydown="@HandleKeyDown" @onfocusout="@HandleFocusOut" @bind:event="oninput" placeholder="@Placeholder" disabled/>
-}
-else
-{
-	<input @ref="@input" type="text" id="@ID" class="@Class" style="font-size: @(FontSize)px; width: @Width; @Style" @bind="@Input" @bind:after="@UpdateInput" @onkeydown="@HandleKeyDown" @onfocusout="@HandleFocusOut" @bind:event="oninput" placeholder="@Placeholder"/>
+@{
+	string width = Width == "available" ? "available; width: -moz-available; width: -webkit-fill-available;" : Width;
+	if (Disabled)
+	{
+		<input @ref="@input" type="text" id="@ID" class="@Class" style="font-size: @(FontSize)px; width: @width; @Style" @bind="@Input" @bind:after="@UpdateInput" @onkeydown="@HandleKeyDown" @onfocusout="@HandleFocusOut" @bind:event="oninput" placeholder="@Placeholder" disabled/>
+	}
+	else
+	{
+		<input @ref="@input" type="text" id="@ID" class="@Class" style="font-size: @(FontSize)px; width: @width; @Style" @bind="@Input" @bind:after="@UpdateInput" @onkeydown="@HandleKeyDown" @onfocusout="@HandleFocusOut" @bind:event="oninput" placeholder="@Placeholder"/>
+	}
 }
 
 @code {
