Fix widths of text inputs in Settings not being perfectly centered

--- a/MemoryMosaic/Pages/Settings.razor
+++ b/MemoryMosaic/Pages/Settings.razor
@@ -8,27 +8,27 @@
         <span class="header">Settings</span>
         <div class="text-setting">
             <span>Server IP Address</span>
-            <TextInput @bind-Input="@serverIP" Width="100%"/>
+            <TextInput @bind-Input="@serverIP" Width="available"/>
         </div>
 
         <div class="text-setting">
             <span>Where to look for items to add to your library</span>
-            <TextInput @bind-Input="@importFolderPath" Width="100%"/>
+            <TextInput @bind-Input="@importFolderPath" Width="available"/>
         </div>
 
         <div class="text-setting">
             <span>Root path to library folder</span>
-            <TextInput @bind-Input="@libraryRootPath" Width="100%"/>
+            <TextInput @bind-Input="@libraryRootPath" Width="available"/>
         </div>
 
         <div class="text-setting">
             <span>Where to backup library and database</span>
-            <TextInput @bind-Input="@backupFolderPath" Width="100%"/>
+            <TextInput @bind-Input="@backupFolderPath" Width="available"/>
         </div>
         
         <div class="text-setting">
             <span>Where to store temporary items</span>
-            <TextInput @bind-Input="@tmpFolderPath" Width="100%"/>
+            <TextInput @bind-Input="@tmpFolderPath" Width="available"/>
         </div>
         
         <div class="toggle-setting">
