--- a/MemoryMosaic/Styles/Pages/Settings.scss
+++ b/MemoryMosaic/Styles/Pages/Settings.scss
@@ -13,7 +13,7 @@
 #body > div {
     width: 40%;
     border: 3px solid white;
-    padding: 13px 15px 0 10px;
+    padding: 15px;
     border-radius: 20px;
     margin-bottom: 25px;
 }
