--- a/MemoryMosaic/Styles/Pages/Memories.scss
+++ b/MemoryMosaic/Styles/Pages/Memories.scss
@@ -21,7 +21,7 @@ header > span {
     margin-right: 10px;
 }
 
-header > select, header > input[type="number"] {
+header > select {
     margin-right: 10px;
     color: white;
     background-color: black;
@@ -31,10 +31,6 @@ header > select, header > input[type="number"] {
 
 header > #randomBtn {
     margin-left: 5px;
-}
-
-input[type='number'] {
-    width: 40px;
 }
 
 h1 {
