--- a/MemoryMosaic/Shared/Modal/CollectionSelector.razor
+++ b/MemoryMosaic/Shared/Modal/CollectionSelector.razor
@@ -5,10 +5,10 @@
 <link href="css/Components/Modal/CollectionSelector.css" rel="stylesheet"/>
 
 <ModalBackground Visibility="@Visibility">
-    <div id="collectionSelector">
+    <div id="collection-selector">
         <div id="header">
             <span>Add to</span>
-            <div id="buttons">
+            <div>
                 <IconButton Icon="close" OnClick="@CloseBtnClick"/>
                 <IconButton Icon="check" OnClick="@ConfirmBtnClick"/>
             </div>
@@ -16,52 +16,66 @@
 
         <CollectionCreator @ref="@collectionCreator" Collections="@(albums.Concat(folders).ToList())" OnCollectionCreate="@RefreshData"/>
 
-        <div id="collectionGroups">
+        <div id="collection-groups">
             <IconButton Icon="history" OnClick="@(() => PreviousSelectionBtnClick(false))" Title="Restore the last selection of collections."/>
 
-            @for (int i = 1; i < 6; i++)
-            {
-                int ii = i;
-                <IconButton Icon="save" EventArgsOnClick="@(mouseEventArgs => SaveBtnClick(ii, mouseEventArgs))" Title="Ctrl click to save; click to apply."/>
-            }
+            <div class="hidden-buttons">
+                @for (int i = 1; i < 6; i++)
+                {
+                    int ii = i;
+                    <IconButton Icon="save" EventArgsOnClick="@(mouseEventArgs => SaveBtnClick(ii, mouseEventArgs))" Title="Ctrl click to save; click to apply."/>
+                }
+            </div>
         </div>
         
-        <div id="collectionsSearch">
+        <div id="collections-search">
             <TextInput @bind-Input="@searchText" Placeholder="Search Collections"/>
-            <IconButton Icon="clear" OnClick="@(() => searchText = "")"/>
+            <IconButton Icon="clear" OnClick="@(() => { searchText = ""; StateHasChanged(); })"/>
         </div>
-        
+
         <div id="collections">
             <span>Albums</span>
-            <div class="collectionsList">
+            <div>
                 @for (int i = 0; i < albums.Count; i++)
                 {
                     if (!String.IsNullOrWhiteSpace(searchText) && albums[i].name.IndexOf(searchText, StringComparison.InvariantCultureIgnoreCase) == -1) continue;
-                    
+
                     int ii = i;
-                    <div class="collection" @onclick="@(() => { checkedAlbums[ii] = !checkedAlbums[ii]; ClearFolderChecks(); checkedFolderIndex = -1; })">
-                        <div class="coverDiv">
-                            @if (albums[i].cover != ""){<img src="mm_library/@albums[i].cover" alt="">}
+                    <div class="collection" @onclick="@(() => AlbumClicked(ii))">
+                        <div class="cover">
+                            @if (!String.IsNullOrWhiteSpace(albums[i].cover))
+                            {
+                                <img src="mm_library/@albums[i].cover" alt=""/>
+                            }
                         </div>
-                        <input type="checkbox" @bind="@checkedAlbums[ii]" @bind:event="oninput">
-                        <span title="@albums[i].name">@albums[i].name</span>
+
+                        <div class="checkbox">
+                            <input type="checkbox" @bind="@checkedAlbums[ii]" @bind:event="oninput">
+                            <span>@albums[i].name</span>
+                        </div>
                     </div>
                 }
             </div>
-        
+
             <span>Folders</span>
-            <div class="collectionsList">
+            <div>
                 @for (int i = 0; i < folders.Count; i++)
                 {
                     if (!String.IsNullOrWhiteSpace(searchText) && folders[i].name.IndexOf(searchText, StringComparison.InvariantCultureIgnoreCase) == -1) continue;
 
                     int ii = i;
-                    <div class="collection" @onclick="@(() => { checkedFolderIndex = ii; ClearAlbumChecks(); ClearFolderChecks(); checkedFolders[ii] = true; })">
-                        <div class="coverDiv">
-                            @if (folders[i].cover != ""){<img src="mm_library/@folders[i].cover" alt="">}
+                    <div class="collection" @onclick="@(() => FolderClicked(ii))">
+                        <div class="cover">
+                            @if (!String.IsNullOrWhiteSpace(folders[i].cover))
+                            {
+                                <img src="mm_library/@folders[i].cover" alt=""/>
+                            }
                         </div>
-                        <input type="checkbox" @bind="@checkedFolders[ii]" @bind:event="oninput">
-                        <span title="@folders[i].name">@folders[i].name</span>
+
+                        <div class="checkbox">
+                            <input type="checkbox" @bind="@checkedFolders[ii]" @bind:event="oninput">
+                            <span>@folders[i].name</span>
+                        </div>
                     </div>
                 }
             </div>
@@ -278,5 +292,20 @@
             
             return -1;
         }
+    }
+
+    private void AlbumClicked(int index)
+    {
+        ClearFolderChecks();
+        checkedFolderIndex = -1;
+        checkedAlbums[index] = !checkedAlbums[index];
+    }
+
+    private void FolderClicked(int index)
+    {
+        ClearAlbumChecks();
+        ClearFolderChecks();
+        checkedFolderIndex = index;
+        checkedFolders[index] = true;
     }
 }
