--- a/MemoryMosaic/Styles/Shared.scss
+++ b/MemoryMosaic/Styles/Shared.scss
@@ -35,3 +35,9 @@
 	display: flex;
 	justify-content: center;
 }
+
+@mixin available-width {
+	width: available;
+	width: -webkit-fill-available;
+	width: -moz-available;
+}
