Clean up redundant variable declarations and CSS properties

--- a/MemoryMosaic/Styles/Shared.scss
+++ b/MemoryMosaic/Styles/Shared.scss
@@ -13,6 +13,9 @@
 	--hover-color: rgba(211, 211, 211, 0.1);
 	font-family: Product Sans, sans-serif;
 	color: white;
+	--left-margin: 146px; /* For things with absolute positioning, how far to be away from left side of page */
+	user-select: none;
+	scrollbar-width: none !important;
 }
 
 @mixin hover {
