Fix Trash having wrong path to its CSS file

--- a/MemoryMosaic/Pages/LibraryContent/Trash.razor
+++ b/MemoryMosaic/Pages/LibraryContent/Trash.razor
@@ -2,7 +2,7 @@
 @inject IJSRuntime JSRuntime
 
 <title>Trash - MemoryMosaic</title>
-<link href="css/Trash.css" rel="stylesheet"/>
+<link href="css/Pages/Trash.css" rel="stylesheet"/>
 
 @{
     <header>
