--- a/MemoryMosaic/Styles/Pages/Maintenance/UntrackedFiles.scss
+++ b/MemoryMosaic/Styles/Pages/Maintenance/UntrackedFiles.scss
@@ -1,10 +1,7 @@
+@import "../../Shared";
+
 header {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    position: absolute;
-    top: 0;
-    left: var(--left-margin);
+    @include page-header(0, auto, 145px);
 }
 
 header > button {
