--- a/MemoryMosaic/Styles/Pages/Trash.scss
+++ b/MemoryMosaic/Styles/Pages/Trash.scss
@@ -1,3 +1,5 @@
+@import "../Shared";
+
 h1 {
     text-align: center;
     position: absolute;
@@ -7,16 +9,7 @@ h1 {
 }
 
 header {
-    background-color: black;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    align-content: center;
-    position: fixed;
-    left: 145px;
-    right: 0;
-    z-index: 999;
-    height: 60px;
+    @include page-header(0, 60px, 145px);
 }
 
 header > #selectedAmtText {
