--- a/MemoryMosaic/Styles/Shared.scss
+++ b/MemoryMosaic/Styles/Shared.scss
@@ -14,6 +14,7 @@
 	font-family: Product Sans, sans-serif;
 	color: white;
 	user-select: none;
+	font-weight: normal;
 	scrollbar-width: none !important;
 }
 
