--- a/MemoryMosaic/Pages/LibraryContent/CollectionView.razor
+++ b/MemoryMosaic/Pages/LibraryContent/CollectionView.razor
@@ -5,6 +5,7 @@
 
 <title>@collection.name - MemoryMosaic</title>
 <link href="css/Pages/CollectionView.css" rel="stylesheet"/>
+<link href="css/Pages/LibraryContentPage.css" rel="stylesheet"/>
 
 <header>
     @if (lcv.Header.Visible)
