--- a/MemoryMosaic/Styles/Shared.scss
+++ b/MemoryMosaic/Styles/Shared.scss
@@ -17,6 +17,15 @@
 	scrollbar-width: none !important;
 }
 
+h1 {
+	position: absolute;
+	top: 40%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 100%;
+	text-align: center;
+}
+
 @mixin hover {
 	background-color: rgba(211, 211, 211, 0.1);
 	cursor: pointer;
