--- a/MemoryMosaic/Pages/Memories.razor
+++ b/MemoryMosaic/Pages/Memories.razor
@@ -124,7 +124,7 @@
 		}
 	</div>
     
-	<div id="mainDiv">
+	<div>
 		@for (int i = 0; i < MediaList.Count; i++)
 		{
 			if (MediaList[i].dateTaken?.Year != previousYear)
