--- a/MemoryMosaic/Pages/Import.razor
+++ b/MemoryMosaic/Pages/Import.razor
@@ -76,7 +76,7 @@
 
 	<CollectionSelector OnCheckClicked="@UpdateCollections" SelectedItems="@selectedItems" ClearChecksOnConfirm="false"/>
 
-	<div id="mainDiv">
+	<main>
 		@for (int i = 0; i < importFiles.Count; i++)
 		{
 			if (!String.IsNullOrWhiteSpace(searchText) && !searchResults.Contains(importFiles[i].uuid)) continue;
@@ -153,7 +153,7 @@
 				</div>
 			}
 		}
-	</div>
+	</main>
 }
 
 @{
