--- a/MemoryMosaic/Shared/LibraryContentViewer.razor
+++ b/MemoryMosaic/Shared/LibraryContentViewer.razor
@@ -123,7 +123,7 @@ If it can't find any content, it shows an h1 saying no content.
 	}
 </div>
 
-<div id="libContentViewer">
+<main>
 	<div id="moreContentTopDiv" style="@moreContentTopDiv.Style" @onmouseover="@(() => AddContentTop())" @onscroll="@(() => AddContentTop())" @onmousewheel="@(() => AddContentTop())" @onpointerenter="@(() => AddContentTop())" @ontouchenter="@(() => AddContentTop())"></div>
 	@for (int i = 0; i < MediaList.Count; i++)
 	{
@@ -177,7 +177,7 @@ If it can't find any content, it shows an h1 saying no content.
 	}
 
 	<div id="moreContentBottomDiv" style="@moreContentBottomDiv.Style" @onmouseover="@(() => AddContentBottom())" @onscroll="@(() => AddContentBottom())" @onmousewheel="@(() => AddContentBottom())" @onpointerenter="@(() => AddContentBottom())" @ontouchenter="@(() => AddContentBottom())"></div>
-</div>
+</main>
 
 <CollectionSelector @ref="@cs" SelectedItem="@SelectedItem" SelectedItems="@SelectedItems" Header="@Header"/>
 
