--- a/MemoryMosaic/Styles/Components/LibraryContentViewer.scss
+++ b/MemoryMosaic/Styles/Components/LibraryContentViewer.scss
@@ -1,73 +1,71 @@
-#libContentViewer {
-    display: flex;
-    flex-direction: row;
+@import "../Shared";
+
+main {
+    @include flex-main(row, 60px, 145px);
     flex-wrap: wrap;
-    position: absolute;
-    left: 145px;
-    top: 60px;
 }
 
-#libContentViewer > .spanAndRow {
+main > .spanAndRow {
     display: flex;
     flex-direction: column;
     margin-right: 25px;
 }
 
-#libContentViewer > .spanAndRow > span {
+main > .spanAndRow > span {
     font-size: 16px;
     margin-bottom: 4px;
 }
 
-#libContentViewer > .spanAndRow > .row {
+main > .spanAndRow > .row {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     margin-bottom: 20px;
 }
 
-#libContentViewer > .spanAndRow > .row > .thumbnail > .star-icon {
+main > .spanAndRow > .row > .thumbnail > .star-icon {
     position: absolute;
     left: 8px;
     bottom: 10px;
 }
 
-#libContentViewer > .spanAndRow > .row > .thumbnail > .video-icon {
+main > .spanAndRow > .row > .thumbnail > .video-icon {
     position: absolute;
     right: 8px;
     top: 10px;
     pointer-events: none;
 }
 
-#libContentViewer > .spanAndRow > .row > .thumbnail > .checkbox {
+main > .spanAndRow > .row > .thumbnail > .checkbox {
     opacity: 0;
     position: absolute;
     margin-top: 8px;
     margin-left: 8px;
 }
 
-#libContentViewer > .spanAndRow > .row > .thumbnail > .checked {
+main > .spanAndRow > .row > .thumbnail > .checked {
     color: #009FFF;
     visibility: visible;
     opacity: 1;
     transition: 0.3s; /* These transitions can't be in .checkbox because it causes them to very briefly be visible on initial page load. */
 }
 
-#libContentViewer > .spanAndRow > .row > .thumbnail > img {
+main > .spanAndRow > .row > .thumbnail > img {
     height: 200px;
 }
 
-#libContentViewer > .spanAndRow > .row > .thumbnail {
+main > .spanAndRow > .row > .thumbnail {
     position: relative; /* https://stackoverflow.com/a/12365963 */
     cursor: pointer;
     margin-right: 5px;
 }
 
-#libContentViewer > .spanAndRow > .row > .thumbnail:hover > .unchecked { /* Show checkbox on hover */
+main > .spanAndRow > .row > .thumbnail:hover > .unchecked { /* Show checkbox on hover */
     opacity: 0.42;
     transition: 0.3s;
 }
 
-#libContentViewer > .spanAndRow > .row > .thumbnail > .unchecked:hover {
+main > .spanAndRow > .row > .thumbnail > .unchecked:hover {
     opacity: 1;
     transition: 0.3s;
 }
