--- a/MemoryMosaic/Styles/Pages/Import.scss
+++ b/MemoryMosaic/Styles/Pages/Import.scss
@@ -62,21 +62,17 @@ header > #buttons > .iconBtn {
     margin-left: 5px;
 }
 
-#mainDiv {
-    margin-left: var(--left-margin);
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    top: 64px;
+main {
+    @include flex-main(column, 64px, 145px);
 }
 
-#mainDiv > .itemGroup {
+main > .itemGroup {
     margin-top: 5px;
     margin-bottom: 5px;
 }
 
-#mainDiv > .itemGroup > .errorDiv {
+main > .itemGroup > .errorDiv {
 }
 
-#mainDiv > .itemGroup > .warnDiv {
+main > .itemGroup > .warnDiv {
 }
