--- a/MemoryMosaic/Styles/Pages/Maintenance/Backups.scss
+++ b/MemoryMosaic/Styles/Pages/Maintenance/Backups.scss
@@ -13,16 +13,12 @@ header > span {
     font-size: 18px;
 }
 
-#mainDiv {
-    display: flex;
-    flex-direction: column;
+main {
+    @include flex-main(column, 145px, 90px);
     flex-wrap: wrap;
-    position: absolute;
-    left: 145px;
-    top: 90px;
 }
 
-#mainDiv > .backup {
+main > .backup {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -30,7 +26,7 @@ header > span {
     margin-bottom: 20px;
 }
 
-#mainDiv > .backup > span {
+main > .backup > span {
     font-size: 19px;
     margin-right: 30px;
     width: 270px;
