--- a/MemoryMosaic/Styles/Shared.scss
+++ b/MemoryMosaic/Styles/Shared.scss
@@ -66,7 +66,7 @@ h1 {
 	width: -moz-available;
 }
 
-@mixin page-header($border-bottom: 1px solid gray, $height: auto, $left) {
+@mixin page-header($border-bottom: 1px solid gray, $height: auto, $left: 145px) {
 	border-bottom: $border-bottom;
 	height: $height;
 	@include available-width;
