Remove 145px from those mixins as it's 145 by default

--- a/MemoryMosaic/Styles/Components/LibraryContentViewer.scss
+++ b/MemoryMosaic/Styles/Components/LibraryContentViewer.scss
@@ -1,7 +1,7 @@
 @import "../Shared";
 
 main {
-    @include flex-main(row, 60px, 145px);
+    @include flex-main(row, 60px);
     flex-wrap: wrap;
 }
 
