--- a/MemoryMosaic/Styles/Pages/LibraryContentPage.scss
+++ b/MemoryMosaic/Styles/Pages/LibraryContentPage.scss
@@ -1,7 +1,7 @@
 @import "../Shared";
 
 header {
-    @include page-header(0, 60px, 145px);
+    @include page-header(0, 60px);
 }
 
 header > span {
