--- a/MemoryMosaic/Styles/Pages/CollectionView.scss
+++ b/MemoryMosaic/Styles/Pages/CollectionView.scss
@@ -1,26 +1,28 @@
 header > #collectionRenameDiv {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    position: absolute;
-    width: auto;
-    left: 20%;
-}
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	position: absolute;
+	width: auto;
+	left: 20%;
 
-#collectionRenameDiv > .material-icons-outlined {
-    margin-left: 20px;
-}
+	> .material-icons-outlined { margin-left: 20px; }
 
-#collectionRenameDiv > input[type="text"]:hover {
-    border-bottom: 2px solid #dadce0;
-    transition: all .3s cubic-bezier(.4,0,.2,1);
-}
+	> input[type=text] {
+		border: none;
+		border-bottom: 2px solid black;
+		border-radius: 0;
 
-#collectionRenameDiv > input[type="text"]:focus {
-    border-bottom: 2px solid #4285f4;
-    transition: all .3s cubic-bezier(.4,0,.2,1);
-}
+		&:hover {
+			border-bottom: 2px solid #dadce0;
+			transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+		}
 
-#collectionRenameDiv > button {
-    margin-left: 3px;
+		&:focus-visible {
+			border-bottom: 2px solid #4285f4;
+			transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+		}
+	}
+
+	> button { margin-left: 3px; }
 }
