Selections of text now have consistent background color

--- a/MemoryMosaic/Styles/Shared.scss
+++ b/MemoryMosaic/Styles/Shared.scss
@@ -16,6 +16,8 @@
 	user-select: none;
 	font-weight: normal;
 	scrollbar-width: none !important;
+
+	&::selection { background-color: #0080ff; }
 }
 
 h1 {
