Clean up LibraryContentPage.scss. Remove 'Starred' text from Starred.

--- a/MemoryMosaic/Pages/LibraryContent/Home.razor
+++ b/MemoryMosaic/Pages/LibraryContent/Home.razor
@@ -6,7 +6,7 @@
 @{
     <header style="@lcv.Header.Style">
         <IconButton Icon="close" OnClick="@lcv.ClearChecks"/>
-        <span id="selectedAmtText">@lcv.SelectedItemsCount&nbsp;&nbsp;Selected</span>
+        <span>@lcv.SelectedItemsCount&nbsp;&nbsp;Selected</span>
         <div id="buttons">
             <IconButton Icon="file_download" OnClick="@lcv.DownloadSelected" Title="Download Selected"/>
             <IconButton Icon="collections" OnClick="@lcv.cs.Enable" Title="Toggle CollectionSelector"/>
