--- a/MemoryMosaic/Pages/LibraryContent/Search.razor
+++ b/MemoryMosaic/Pages/LibraryContent/Search.razor
@@ -10,7 +10,7 @@
         @if (lcv.Header.Visible)
         {
             <IconButton Icon="close" OnClick="@lcv.ClearChecks"/>
-            <span id="selectedAmtText">@lcv.SelectedItemsCount&nbsp;&nbsp;Selected</span>
+            <span>@lcv.SelectedItemsCount&nbsp;&nbsp;Selected</span>
 
             <div id="buttons">
                 <IconButton Icon="file_download" OnClick="@lcv.DownloadSelected"/>
