--- a/MemoryMosaic/Pages/LibraryContent/CollectionView.razor
+++ b/MemoryMosaic/Pages/LibraryContent/CollectionView.razor
@@ -11,7 +11,7 @@
     @if (lcv.Header.Visible)
     {
         <IconButton Icon="close" OnClick="@lcv.ClearChecks" ID="clearBtn"/>
-        <span id="selectedAmtText">@lcv.SelectedItemsCount&nbsp;&nbsp;Selected</span>
+        <span>@lcv.SelectedItemsCount&nbsp;&nbsp;Selected</span>
     }
 
     <div id="collectionRenameDiv">
