--- a/MemoryMosaic/Pages/LibraryContent/No Date Taken.razor
+++ b/MemoryMosaic/Pages/LibraryContent/No Date Taken.razor
@@ -6,7 +6,7 @@
 @{
     <header style="@lcv.Header.Style">
         <IconButton Icon="close" OnClick="@lcv.ClearChecks"/>
-        <span id="selectedAmtText">@lcv.SelectedItemsCount&nbsp;&nbsp;Selected</span>
+        <span>@lcv.SelectedItemsCount&nbsp;&nbsp;Selected</span>
         <div id="buttons">
             <IconButton Icon="file_download" OnClick="@lcv.DownloadSelected"/>
             <IconButton Icon="collections" OnClick="@lcv.cs.Toggle"/>
