--- a/MemoryMosaic/Pages/LibraryContent/Starred.razor
+++ b/MemoryMosaic/Pages/LibraryContent/Starred.razor
@@ -5,11 +5,10 @@
 
 @{
     <header>
-        <span id="starredText">Starred</span>
         @if (lcv.Header.Visible)
         {
             <IconButton Icon="close" OnClick="@lcv.ClearChecks"/>
-            <span id="selectedAmtText">@lcv.SelectedItemsCount&nbsp;&nbsp;Selected</span>
+            <span>@lcv.SelectedItemsCount&nbsp;&nbsp;Selected</span>
             <div id="buttons">
                 <IconButton Icon="file_download" OnClick="@lcv.DownloadSelected"/>
                 <IconButton Icon="collections" OnClick="@lcv.cs.Toggle"/>
