--- a/MemoryMosaic/Pages/LibraryContent/Trash.razor
+++ b/MemoryMosaic/Pages/LibraryContent/Trash.razor
@@ -9,7 +9,7 @@
         @if (lcv.SelectedItemsCount > 0)
         {
             <IconButton Icon="close" OnClick="@lcv.ClearChecks"/>
-            <span id="selectedAmtText">@lcv.SelectedItemsCount&nbsp;&nbsp;Selected</span>
+            <span>@lcv.SelectedItemsCount&nbsp;&nbsp;Selected</span>
         }
 
         <div>
